# ani-tui

./: .gitignore  Cargo.toml  README.md  RELEASE-CHECKLIST.md
.github/workflows/: release.yml
Formula/: ani-tui.rb
migrations/: 001_initial.sql
src/: config.rs  error.rs  main.rs
src/api/: anilist.rs  mod.rs  player.rs
src/db/: cache.rs  mod.rs  sync.rs  user.rs
src/services/: sync.rs
src/state/: mod.rs
src/ui/: detail.rs  help.rs  home.rs  mod.rs  play_options.rs  play_query.rs  playback.rs  search.rs  settings.rs  setup.rs
src/ui/components/: cover.rs
